--- a/style.css
+++ b/style.css
@@ -57,6 +57,7 @@ form input {
   margin: 0% 5% 5% 0%;
   border-radius: 2px;
   width: 23%;
+  min-width: 250px;  
 }
 
 .single-note a:before{
@@ -67,6 +68,10 @@ form input {
 select {
   margin: 25px 20px;
   padding: 10px;
+  background-color: #eee;
+  border: 0px;
+  background-image: linear-gradient(rgba(0,0,0,.1), rgba(255,255,255,.3));
+  box-shadow: 1px 1px 1px rgba(0,0,0,.2) inset;
 }
 
 
@@ -153,11 +158,10 @@ label:last-child {
   background-color: #FF6369;
     border-style: solid;
     border-width: 1px 1px 1px 0;
-    border-color: #666;
     background-image: -moz-linear-gradient(rgba(255,255,255,.2), rgba(0,0,0,.2));
     background-image: -webkit-linear-gradient(rgba(255,255,255,.2), rgba(0,0,0,.2));
     background-image: linear-gradient(rgba(255,255,255,.2), rgba(0,0,0,.2));
-    box-shadow: 5px 1px 1px rgba(255,255,255,.2) inset, -1px -1px 1px rgba(0,0,0,.2) inset;
+    box-shadow: 2px 1px 3px rgba(255,255,255,.2) inset, -1px -1px 1px rgba(0,0,0,.2) inset;
 }
 label.warning.selected {
     background-color: #FF6369;
